# its-dead-jim

./: .gitignore  README.md  pyproject.toml  requirements.txt
base_systems/actions/: base.py  commands.py  counterqueue.py  queue.py
base_systems/characters/: actions.py  assess.py  base.py  descs.py  energy.py  movement.py  npcs.py  players.py  social.py  timestamps.py
base_systems/community/: commands.py
base_systems/effects/: base.py  damage.py  effects.py  handler.py
base_systems/exits/: base.py  commands.py  doors.py
base_systems/help/: commands.py
base_systems/maps/: building.py  commands.py  pathing.py
base_systems/meta/: base.py
base_systems/prototypes/: base_things.py  behaviors.py  spawning.py
base_systems/rooms/: base.py
base_systems/things/: actions.py  base.py  behaviors.py  commands.py  effects.py  liquids.py  meta.py
core/: accounts.py  cmdparser.py  commands.py  default_cmdsets.py  scripts.py  system_cmds.py
core/ic/: base.py  behaviors.py  decor.py  descs.py  emotes.py  features.py  meta.py  parts.py  poses.py  reactions.py  (+2 more)
data/: bands.py  chargen.py  colors.py  damages.py  maps.py  materials.py  prototypes.py  skills.py  socials.py  software.py
db/: managers.py  models.py
fontello-b4d3eae9/: config.json  demo.html
switchboard/: __init__.py
utils/: CmdWiki.py  colors.py  files.py  funcparser_callables.py  gamewipe.py  general.py  handlers.py  menus.py  registry.py  stopwords.txt  strmanip.py  table.py  testing.py  timing.py  wiki_helpers.py
web/: custom_context.py  urls.py
world/: gen_test.py  menu_class_test.py
(+210 files in other folders)
